# applsoftcomp-sprint-m01

./: NOTE.md  README.md  pyproject.toml  run.sh
data/preprocessed/: merged_mortality_gdp.csv
workflow/: Merged_plot_ code.py
